ui: fix misaligned images in galleries

--- a/ui/src/scss/_post.scss
+++ b/ui/src/scss/_post.scss
@@ -252,6 +252,10 @@
             @include mixins.not-mobile {
                 height: 600px;
             }
+            .image,
+            .image-container {
+                width: 100%;
+            }
         }
     }
 
